--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "dist": "^0.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-svg": "^16.1.18",
